# stock_price_prediction

./: .gitignore  .travis.yml  AUTHORS.rst  CONTRIBUTING.rst  LICENSE  Makefile  README.md  README.rst  package-lock.json  package.json  pyproject.toml  tailwind.config.ts  tox.ini
.github/: ISSUE_TEMPLATE.md
.next/: app-build-manifest.json  trace
.next/cache/: .rscinfo
.next/server/: app-paths-manifest.json  server-reference-manifest.json  webpack-runtime.js
backend/: app.py  requirements.txt
backend/model_low_prices/: ABT_model.h5  ACN_model.h5  ADBE_model.h5  AEP_model.h5  AXP_model.h5  BAC_model.h5  BLK_model.h5  CI_model.h5  COST_model.h5  CSCO_model.h5  CVS_model.h5  CVX_model.h5  DHR_model.h5  EMR_model.h5  EW_model.h5  FDX_model.h5  FISV_model.h5  GILD_model.h5  GOOG_model.h5  GS_model.h5  IBM_model.h5  ICE_model.h5  INTC_model.h5  JNJ_model.h5  KLAC_model.h5  KO_model.h5  MAR_model.h5  MA_model.h5  MDT_model.h5  MSFT_model.h5  MS_model.h5  NEM_model.h5  NFLX_model.h5  NKE_model.h5  (+15 more)
dataset/: AAPL_data.csv  ABBV_data.csv  ABT_data.csv  ACN_data.csv  ADBE_data.csv  AEP_data.csv  AMD_data.csv  AMGN_data.csv  AMZN_data.csv  APD_data.csv  AVGO_data.csv  AXP_data.csv  BAC_data.csv  BA_data.csv  BDX_data.csv  BK_data.csv  BLK_data.csv  BRK-B_data.csv  CAH_data.csv  CAT_data.csv  CI_data.csv  CMCSA_data.csv  COF_data.csv  COP_data.csv  COST_data.csv  CSCO_data.csv  CVS_data.csv  CVX_data.csv  DHR_data.csv  DIS_data.csv  EMR_data.csv  EOG_data.csv  EW_data.csv  FDX_data.csv  FISV_data.csv  FIS_data.csv  F_data.csv  GD_data.csv  GE_data.csv  GILD_data.csv  (+56 more)
docs/: conf.py  index.rst  installation.rst  usage.rst
tests/: test_stock_price_prediction.py
(+459 files in other folders)
